--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 
     <link rel="stylesheet" type="text/css" href="style.css" />
 
-    <script src="/PlayerBase.js"></script>
-    <script src="/ComputerBase.js"></script>
+    <script src="PlayerBase.js"></script>
+    <script src="ComputerBase.js"></script>
 
-    <script src="/Player.js"></script>
-    <script src="/Computer.js"></script>
+    <script src="Player.js"></script>
+    <script src="Computer.js"></script>
 
-    <script src="/PlayerArcher.js"></script>
-    <script src="/ComputerArcher.js"></script>
+    <script src="PlayerArcher.js"></script>
+    <script src="ComputerArcher.js"></script>
 
-    <script src="/PlayerArrow.js"></script>
-    <script src="/ComputerArrow.js"></script>
+    <script src="PlayerArrow.js"></script>
+    <script src="ComputerArrow.js"></script>
   </head>
   <body>
     <script src="sketch.js"></script>
