--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 
     <link rel="stylesheet" type="text/css" href="style.css" />
 
-    <script src="PlayerBase.js"></script>
-    <script src="ComputerBase.js"></script>
+    <script src="PlayerBase"></script>
+    <script src="ComputerBase"></script>
 
-    <script src="Player.js"></script>
-    <script src="Computer.js"></script>
+    <script src="Player"></script>
+    <script src="Computer"></script>
 
-    <script src="PlayerArcher.js"></script>
-    <script src="ComputerArcher.js"></script>
+    <script src="PlayerArcher"></script>
+    <script src="ComputerArcher"></script>
 
-    <script src="PlayerArrow.js"></script>
-    <script src="ComputerArrow.js"></script>
+    <script src="PlayerArrow"></script>
+    <script src="ComputerArrow"></script>
   </head>
   <body>
-    <script src="sketch.js"></script>
+    <script src="sketch"></script>
   </body>
 </html>
